--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,25 +9,15 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - 27017:27017
-  nginx:
-    depends_on: 
-      - api
-      - frontend
-    restart: always
-    build: 
-      dockerfile: Dockerfile
-      context: ./nginx
-    ports: 
-      - '3050:80'
-  api:
+  backend:
     depends_on: 
       - mongo
     build:
       dockerfile: Dockerfile.dev
-      context: ./server
+      context: ./backend
     volumes:
       - /app/node_modules
-      - ./server:/app
+      - ./backend:/app
     environment: 
       - MONGO_URI=mongodb://root:example@mongo:27017
   frontend:
@@ -38,3 +28,13 @@ services:
       - /app/node_modules
       - ./frontend:/app
     stdin_open: true
+  nginx:
+    depends_on: 
+      - backend
+      - frontend
+    restart: always
+    build: 
+      dockerfile: Dockerfile
+      context: ./nginx
+    ports: 
+      - '3050:80'
