--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,8 +2,8 @@ upstream frontend {
   server frontend:3000;
 }
 
-upstream api {
-  server api:5000;
+upstream backend {
+  server backend:5000;
 }
 
 server {
@@ -15,7 +15,7 @@ server {
 
   location /api {
     rewrite /api/(.*) /$1 break;
-    proxy_pass http://api;
+    proxy_pass http://backend;
   }
 
 }
