uncomment travis section

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,22 @@
-# sudo: required
-# language: generic 
-# services:
-#   - docker
+sudo: required
+language: generic 
+services:
+  - docker
 
-# before_install:
-#   - docker build -t hmatwiejczyk/next-test -f ./frontend/Dockerfile.dev ./frontend
+before_install:
+  - docker build -t hmatwiejczyk/next-test -f ./frontend/Dockerfile.dev ./frontend
 
-# script:
-#   - docker run hmatwiejczyk/next-test yarn test
+script:
+  - docker run hmatwiejczyk/next-test yarn test
 
-# after_success:
-#   - docker build -t hmatwiejczyk/epro-frontend ./frontend
-#   - docker build -t hmatwiejczyk/epro-backend ./backend
-#   - docker build -t hmatwiejczyk/epro-nginx ./nginx
-#   - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_ID" --password-stdin
-#   - docker push hmatwiejczyk/epro-frontend
-#   - docker push hmatwiejczyk/epro-backend
-#   - docker push hmatwiejczyk/epro-nginx
+after_success:
+  - docker build -t hmatwiejczyk/epro-frontend ./frontend
+  - docker build -t hmatwiejczyk/epro-backend ./backend
+  - docker build -t hmatwiejczyk/epro-nginx ./nginx
+  - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_ID" --password-stdin
+  - docker push hmatwiejczyk/epro-frontend
+  - docker push hmatwiejczyk/epro-backend
+  - docker push hmatwiejczyk/epro-nginx
 
 # deploy:
 #   edge: true
