--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,12 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
+  build:
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
+      - run: docker build -t hmatwiejczyk/next-test -f ./frontend/Dockerfile.dev ./frontend
+      - run: docker run hmatwiejczyk/next-test yarn test
+
 workflows:
-    build-and-test:
+    build:
       jobs:
-        - build-and-test
+        - build
