--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,17 @@
-version: 2.1
 jobs:
-  build:
-    docker: 
-      - image: docker:17.05.0-ce-git
+  install-node-example:
+    docker:
+      - image: 'cimg/base:stable'
     steps:
-      - checkout # check out the code in the project directory
-      - run:
-          name: Install docker
-            command: |
-              apt-get update --fix-missing
-              apt-get install -y apt-transport-https ca-certificates software-properties-common
-              curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-              apt-key fingerprint 0EBFCD88
-              add-apt-repository \
-                "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
-                $(lsb_release -cs) \
-                stable"
-              apt-get update
-              apt-get install -y docker-ce
-              docker --version
-      - run: docker build -t hmatwiejczyk/next-test -f ./frontend/Dockerfile.dev ./frontend
-      - run: docker run hmatwiejczyk/next-test yarn test
+      - checkout
+      - node/install:
+          install-yarn: true
+          node-version: latest
+      - run: yarn test
+orbs:
+  node: circleci/node@x.y
+version: 2.1
+workflows:
+  test_my_app:
+    jobs:
+      - install-node-example
