--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           node-version: latest
       - run: yarn test
 orbs:
-  node: circleci/node@x.y
+  node: circleci/node@3.0.1
 version: 2.1
 workflows:
   test_my_app:
