--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,11 @@
 jobs:
-  install-node-example:
+  build:
     docker:
-      - image: 'cimg/base:stable'
-    steps:
-      - checkout
-      - node/install:
-          install-yarn: true
-          node-version: latest
-      - run: yarn test
-orbs:
-  node: circleci/node@3.0.1
+      - build:
+        dockerfile: './frontend/Dockerfile.dev'
+
 version: 2.1
 workflows:
   test_my_app:
     jobs:
-      - install-node-example
+      - build-test
