--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,21 @@
+version: 2.1
 jobs:
   build:
     docker:
-      - build:
-        dockerfile: './frontend/Dockerfile.dev'
+      -image: node:11.10.1
 
-version: 2.1
-workflows:
-  test_my_app:
-    jobs:
-      - build
+    working_directory: ~/repo/frontend
+
+    steps:
+      - checkout
+
+      - restore_cache:
+        keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies
+      - run: yarn install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - run: yarn test
