--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: node:11.10.1
 
-    working_directory: ~/repo
+    working_directory: ~/project/frontend
 
     steps:
       - checkout
