--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,11 @@ jobs:
     docker:
       - image: node:11.10.1
 
-    working_directory: ~/repo
+    working_directory: ~/repo/frontend
 
     steps:
-      - checkout
+      - checkout:
+          path: ~/repo
 
       # Download and cache dependencies
       - restore_cache:
@@ -16,7 +17,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: yarn --prefix ./frontend install
+      - run: yarn install
 
       - save_cache:
           paths:
@@ -24,4 +25,4 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      - run: yarn --prefix ./frontend test
+      - run: yarn test
