--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,10 +23,8 @@ jobs:
   build:
     docker:
       - image: circleci/node:10
-    working_directory: ~/repo/frontend
     steps:
-      - checkout:
-          path: ~/repo
+      - checkout
       - setup_remote_docker
       - run:
           name: build container
