--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,12 @@ jobs:
       - run:
           name: build container
           command: docker build -t hmatwiejczyk/epro-frontend ./frontend
+      - run:
+          name: login docker
+          command: echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_ID" --password-stdin
+      -run:
+          name: push frontend image
+          command: docker push hmatwiejczyk/epro-frontend
 
 workflows:
   version: 2.1
