--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ workflows:
   version: 2.1
   build_and_test:
     jobs:
-      - test-frontend
+      # - test-frontend
       - build-frontend
       
 # version: 2
