--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,13 @@ workflows:
   version: 2.1
   test:
     jobs:
-      - test-frontend
+      - test-frontend:
+          ignore:
+            - circleci-project-setup
+
   build_and_test:
     jobs:
+      - test-frontend
       - build-frontend:
           requires:
             - test-frontend
