--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ workflows:
           filters:
             branches:
               ignore:
-                - circleci-project-setup
+                - master
 
   build_and_test:
     jobs:
