--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,15 +17,21 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: yarn test
-  build-frontend:
+  build:
     docker:
       - image: circleci/node:12
     steps:
       - checkout
       - setup_remote_docker
       - run: docker build -t hmatwiejczyk/epro-frontend ./frontend
+      - run: docker build -t hmatwiejczyk/epro-backend ./backend
+      - run: docker build -t hmatwiejczyk/epro-nginx ./nginx
       - run: echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_ID" --password-stdin
       - run: docker push hmatwiejczyk/epro-frontend
+      - run: docker push hmatwiejczyk/epro-backend
+      - run: docker push hmatwiejczyk/epro-nginx
+  deploy:
+    
 
 workflows:
   version: 2.1
@@ -37,10 +43,10 @@ workflows:
               ignore:
                 - master
 
-  build_and_test:
+  test_build_deploy:
     jobs:
       - test-frontend
-      - build-frontend:
+      - build:
           requires:
             - test-frontend
           filters:
