--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,30 @@ jobs:
       - run: docker push hmatwiejczyk/epro-backend
       - run: docker push hmatwiejczyk/epro-nginx
   deploy:
-    
+    docker:
+      - image: circleci/python:latest
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: Install awscli
+          command: |
+            sudo pip install awsebcli --upgrade
+      - run:
+          name: Create AWS credentials manually
+          command: |
+            mkdir ~/.aws
+            touch ~/.aws/config
+            chmod 600 ~/.aws/config
+            echo "[profile eb-cli]" > ~/.aws/config
+            echo "aws_access_key_id=$AWS_ACCESS_KEY_ID" >> ~/.aws/config
+            echo "aws_secret_access_key=$AWS_SECRET_KEY" >> ~/.aws/config
+      - run:
+          name: Deploy to EB if branch is Master
+          command: |
+            eb use circleci-beanstalk-example --profile eb-cli
+            eb deploy -v --staged --profile eb-cli
+
 
 workflows:
   version: 2.1
@@ -41,7 +64,7 @@ workflows:
           filters:
             branches:
               ignore:
-                - master
+                - circleci-project-setup #change to master
 
   test_build_deploy:
     jobs:
@@ -49,6 +72,13 @@ workflows:
       - build:
           requires:
             - test-frontend
+          filters:
+            branches:
+              only:
+              - circleci-project-setup
+      - deploy:
+          requires:
+            - build
           filters:
             branches:
               only:
