--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,29 +31,18 @@ jobs:
       - run: docker push hmatwiejczyk/epro-backend
       - run: docker push hmatwiejczyk/epro-nginx
   deploy:
+    working_directory: ~/app
     docker:
       - image: circleci/python:latest
-    working_directory: ~/repo
     steps:
       - checkout
       - run:
-          name: Install awscli
-          command: |
-            sudo pip install awsebcli --upgrade
+          name: Installing deployment dependencies
+          working_directory: /
+          command: 'sudo pip install awsebcli --upgrade'
       - run:
-          name: Create AWS credentials manually
-          command: |
-            mkdir ~/.aws
-            touch ~/.aws/config
-            chmod 600 ~/.aws/config
-            echo "[profile eb-cli]" > ~/.aws/config
-            echo "aws_access_key_id=$AWS_ACCESS_KEY_ID" >> ~/.aws/config
-            echo "aws_secret_access_key=$AWS_SECRET_KEY" >> ~/.aws/config
-      - run:
-          name: Deploy to EB if branch is Master
-          command: |
-            eb use circleci-beanstalk-example --profile eb-cli
-            eb deploy -v --staged --profile eb-cli
+          name: Deploying application to Elastic Beanstalk
+          command: eb deploy
 
 
 workflows:
