--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,10 @@ jobs:
       - run:
           name: Installing deployment dependencies
           command: sudo pip install --upgrade awsebcli
+      - run : echo ${AWS_ACCESS_KEY_ID}
       - run:
           name: Deploying application to Elastic Beanstalk
-          command: eb deploy epro
+          command: eb deploy Epro-env
 
 
 workflows:
