--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,8 @@ jobs:
     steps:
       - checkout
       - run: sudo pip install --upgrade awsebcli
-      - run: eb init --region eu-central-1 epro
-      - run: eb deploy
+      - run: eb init --region eu-central-1 --platform "arn:aws:elasticbeanstalk:eu-central-1::platform/Multi-container Docker running on 64bit Amazon Linux/2.20.3" epro
+      - run: eb deploy Epro-env
 
 
 workflows:
