--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,11 @@ workflows:
 
   test_build_deploy:
     jobs:
-      - test-frontend
+      - test-frontend:
+          filters:
+            branches:
+              only:
+                - master
       - build:
           requires:
             - test-frontend
