--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ workflows:
           filters:
             branches:
               only:
-              - master
+              - circleci-project-setup
       - build:
           requires:
             - test-frontend
